# TDIGP

./: .gitignore  CMakeLists.txt  Useful Sql Queries.txt  license.txt  readme.md  user manual.md  vcpkg.json
TDIGP/Core/: CMakeLists.txt  IIssueEntry.h  ITDItem.h
TDIGP/Visualizer/: CMakeLists.txt  main.cpp
TDMon/: CMakeLists.txt  application_state.h  connectable_to_data_sources.h  connectable_to_technical_debt_dataset_databse.h  constants.cc  constants.h  core.cc  core.h  default_td_mon.cc  default_td_mon.h  default_td_mon.test.cc  default_td_mon_cache.cc  default_td_mon_cache.h  default_td_mon_cache.test.cc  main.cc  main_menu.cc  main_menu.cpp  main_menu.h  observe_menu.cc  observe_menu.h  setup.h  setup_menu.cc  setup_menu.h  td_item.h  td_mon.cc  td_mon.h  td_mon_cache.h  td_mon_factory.h  technical_debt_dataset_access_information_container.h  technical_debt_dataset_connectable_default_td_mon_factory.cc  technical_debt_dataset_connectable_default_td_mon_factory.h  technical_debt_dataset_connectable_default_td_mon_factory.test.cc  technical_debt_dataset_setup_menu.cc  technical_debt_dataset_setup_menu.h
TDMon/Core/: CMakeLists.txt  Core.cpp
